# SDL2Paint

./: CMakeLists.txt  README.md
include/: button.hpp  window.hpp
src/: button.cpp  main.cpp  window.cpp
